# kvs

./: .kvs  Cargo.toml  store.kvs
docs/: bitcask.md  bitcask.txt  error.md  resp2.md  resp3.md  serde.md
kvs/: Cargo.toml
kvs/src/: lib.rs  utils.rs
kvs/src/engine/: kvs.rs  mod.rs  sled.rs
serde_resp/: Cargo.toml
serde_resp/src/: de.rs  error.rs  lib.rs  ser.rs
src/: lib.rs  main.rs  utils.rs
