[package]
edition = "2018"
name = "kvs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
assert_cmd = "1.0.5"
bson = "2.0.0-beta.1"
clap = "3.0.0-beta.2"
criterion = "0.3.4"
predicates = "1.0.8"
rand = "0.8.4"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
sled = "0.34.6"
tempfile = "3.2.0"
thiserror = "1.0.25"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
walkdir = "2.3.2"

[[bin]]
name = "kvs-client"
path = "bin/kvs-client.rs"

[[bin]]
name = "kvs-server"
path = "bin/kvs-server.rs"
