[package]
edition = "2018"
name = "serde_resp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
assert_cmd = "1.0.5"
bson = "2.0.0-beta.1"
clap = "3.0.0-beta.2"
predicates = "1.0.8"
serde = {version = "1.0.126", features = ["derive"]}
tempfile = "3.2.0"
thiserror = "1.0.25"
walkdir = "2.3.2"
